# openfst

./: .editorconfig  .gitignore  AUTHORS  BUILD.bazel  CMakeLists.txt  Makefile.in  NEWS  README  README.md  WORKSPACE.bazel  _import_release.sh  aclocal.m4  conanfile  conanfile.txt  configure  configure.ac  openfst.sln  package.cmd
.github/workflows/: cmake.yml
src/: Makefile.in  bin.vcxproj  libfst.vcxproj  libfst.vcxproj.filters  libfstscript.vcxproj  openfst-multibin.targets  openfst.props  openfst.targets  openfst.user.props
src/extensions/: CMakeLists.txt  Makefile.in
src/extensions/compact/: CMakeLists.txt  Makefile.am  Makefile.in  compact16_acceptor-fst.cc  compact16_string-fst.cc  compact16_unweighted-fst.cc  compact16_unweighted_acceptor-fst.cc  compact16_weighted_string-fst.cc  compact64_acceptor-fst.cc  compact64_string-fst.cc  compact64_unweighted-fst.cc  compact64_unweighted_acceptor-fst.cc  compact64_weighted_string-fst.cc  compact8_acceptor-fst.cc  compact8_string-fst.cc  compact8_unweighted-fst.cc  compact8_unweighted_acceptor-fst.cc  compact8_weighted_string-fst.cc
src/extensions/compress/: CMakeLists.txt  Makefile.am  Makefile.in  compressscript.cc  fstcompress-main.cc  fstcompress.cc
src/extensions/const/: CMakeLists.txt  Makefile.am  Makefile.in  const16-fst.cc  const64-fst.cc  const8-fst.cc
src/extensions/far/: CMakeLists.txt  Makefile.am  Makefile.in  build_defs.bzl  far-class.cc  farcompilestrings-main.cc  farcompilestrings.cc  farconvert-main.cc  farconvert.cc  farcreate-main.cc  farcreate.cc  farequal-main.cc  farequal.cc  farextract-main.cc  farextract.cc  farinfo-main.cc  farinfo.cc  farisomorphic-main.cc  farisomorphic.cc  farprintstrings-main.cc  farprintstrings.cc  farscript.cc  getters.cc  script-impl.cc  stlist.cc  strings.cc  sttable.cc
src/extensions/linear/: CMakeLists.txt  Makefile.am  Makefile.in  fstlinear-main.cc  fstloglinearapply-main.cc  linear-classifier-fst.cc  linear-tagger-fst.cc  linearscript.cc
src/extensions/lookahead/: CMakeLists.txt  Makefile.am  Makefile.in
src/extensions/mpdt/: CMakeLists.txt  Makefile.am  Makefile.in  mpdtcompose-main.cc  mpdtexpand-main.cc  mpdtinfo-main.cc  mpdtreverse-main.cc  mpdtscript.cc
src/extensions/ngram/: CMakeLists.txt  Makefile.am  Makefile.in  bitmap-index.cc  ngram-fst.cc  nthbit.cc
src/extensions/pdt/: CMakeLists.txt  Makefile.am  Makefile.in  getters.cc  pdtcompose-main.cc  pdtexpand-main.cc  pdtinfo-main.cc  pdtreplace-main.cc  pdtreplace.cc  pdtreverse-main.cc  pdtscript.cc  pdtshortestpath-main.cc
src/extensions/python/: CMakeLists.txt  Makefile.am  Makefile.in  cintegral_types.pxd  cios.pxd  cpywrapfst.pxd  cutility.pxd  fst.pxd  ios.pxd  pywrapfst.cc  pywrapfst.cpp  pywrapfst.pxd  pywrapfst.pyx
src/extensions/special/: CMakeLists.txt  Makefile.am  Makefile.in  phi-fst.cc  rho-fst.cc  sigma-fst.cc
src/include/: Makefile.am  Makefile.in
src/include/fst/: accumulator.h  add-on.h  arc-arena.h  arc-map.h  arc.h  arcsort.h  bi-table.h  cache.h  closure.h  compact-fst.h  compat.h  complement.h  compose-filter.h  compose.h  concat.h  connect.h  const-fst.h  determinize.h  dfs-visit.h  disambiguate.h  edit-fst.h  encode.h  equal.h  equivalent.h  error-weight.h  expanded-fst.h  expander-cache.h  expectation-weight.h  factor-weight.h  filter-state.h  flags.h  float-weight.h  fst-decl.h  fst.h  fstlib.h  generic-register.h  heap.h  icu.h  interval-set.h  invert.h  (+61 more)
src/include/fst/extensions/compress/: compress.h  compressscript.h  gzfile.h
src/include/fst/extensions/far/: compile-strings.h  convert.h  create.h  equal.h  extract.h  far-class.h  far.h  farscript.h  getters.h  info.h  isomorphic.h  print-strings.h  script-impl.h  stlist.h  sttable.h
src/include/fst/extensions/linear/: linear-fst-data-builder.h  linear-fst-data.h  linear-fst.h  linearscript.h  loglinear-apply.h  trie.h
src/include/fst/extensions/mpdt/: compose.h  expand.h  info.h  mpdt.h  mpdtscript.h  read_write_utils.h
src/include/fst/extensions/ngram/: bitmap-index.h  ngram-fst.h  nthbit.h
src/include/fst/extensions/pdt/: collection.h  compose.h  expand.h  getters.h  info.h  paren.h  pdtscript.h  replace.h  reverse.h  shortest-path.h
src/include/fst/extensions/special/: phi-fst.h  rho-fst.h  sigma-fst.h
src/include/fst/script/: arc-class.h  arciterator-class.h  arcsort.h  arg-packs.h  closure.h  compile-impl.h  compile.h  compose.h  concat.h  convert.h  decode.h  determinize.h  difference.h  disambiguate.h  draw-impl.h  draw.h  encode.h  encodemapper-class.h  epsnormalize.h  equal.h  equivalent.h  fst-class.h  fstscript-decl.h  fstscript.h  getters.h  info-impl.h  info.h  intersect.h  isomorphic.h  map.h  minimize.h  print-impl.h  print.h  project.h  prune.h  push.h  randequivalent.h  randgen.h  register.h  relabel.h  (+14 more)
src/include/fst/test/: algo_test.h  compactors.h  fst_test.h  rand-fst.h  weight-tester.h
src/lib/: CMakeLists.txt  Makefile.am  Makefile.in  compat.cc  encode.cc  flags.cc  fst.cc  libfst.vcxproj  libfst.vcxproj.filters  mapped-file.cc  properties.cc  symbol-table-ops.cc  symbol-table.cc  util.cc  weight.cc
src/script/: CMakeLists.txt  Makefile.am  Makefile.in  arciterator-class.cc  arcsort.cc  closure.cc  compile.cc  compose.cc  concat.cc  connect.cc  convert.cc  decode.cc  determinize.cc  difference.cc  disambiguate.cc  draw.cc  encode.cc  encodemapper-class.cc  epsnormalize.cc  equal.cc  equivalent.cc  fst-class.cc  getters.cc  info-impl.cc  info.cc  intersect.cc  invert.cc  isomorphic.cc  map.cc  minimize.cc  print.cc  project.cc  prune.cc  push.cc  randequivalent.cc  randgen.cc  relabel.cc  replace.cc  reverse.cc  reweight.cc  (+10 more)
src/test/: CMakeLists.txt  Makefile.in  algo_test.cc  algo_test.h  fst_test.cc  fst_test.h  weight_test.cc
