project(openfst)
include(CTest)
find_package(ICU COMPONENTS data i18n io  test tu uc)
if (ICU_FOUND)
  include_directories(${ICU_INCLUDE_DIRS})
  set(LIBS ${LIBS} ${ICU_LIBRARIES})
  message(STATUS "Found ICU version ${ICU_VERSION}")
endif (ICU_FOUND)

find_package(ZLIB)
if (ZLIB_FOUND) 
  message(STATUS "zlib found, version: ${ZLIB_VERSION_STRING}")
endif (ZLIB_FOUND)

find_package(PYTHONLIBS)
if (PYTHONLIBS_FOUND)
  message(STATUS "Found Python version ${PYTHONLIBS_VERSION_STRING}")
endif (PYTHONLIBS_FOUND)

cmake_minimum_required(VERSION 3.1)
set(CMAKE_MACOSX_RPATH 1)
set(CMAKE_CXX_STANDARD 11)

if (WIN32)
  add_definitions(/bigobj)
  set(WHOLEFST "/WHOLEARCHIVE:fst")
  set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${WHOLEFST}")
  #set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS 1)
  #this must be disabled unless the previous option (CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS) is enabled
  option(BUILD_SHARED_LIBS "Build shared libraries" OFF)
else()
  option(BUILD_SHARED_LIBS "Build shared libraries" ON)
endif (WIN32)

set(SOVERSION "10")
OPTION(BUILD_USE_SOLUTION_FOLDERS "Enable grouping of projects in VS" ON) 
SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ${BUILD_USE_SOLUTION_FOLDERS}) 
 

option(HAVE_BIN          "Build the fst binaries" ON)
option(HAVE_SCRIPT       "Build the fstscript" ON)
if (PYTHONLIBS_FOUND)
option(HAVE_PYTHON "Build python" OFF)
endif (PYTHONLIBS_FOUND)
option(HAVE_COMPACT      "Build compact" ON)
if (ZLIB_FOUND)
option(HAVE_COMPRESS "Build compress" ON)
endif (ZLIB_FOUND)
option(HAVE_CONST   "Build const" ON)
option(HAVE_FAR  "Build far" ON)
option(HAVE_GRM "Build grm" ON)
option(HAVE_PDT "Build pdt" ON)
option(HAVE_MPDT "Build mpdt" ON)
option(HAVE_LINEAR "Build linear" ON)
option(HAVE_LOOKAHEAD "Build lookahead" ON)
option(HAVE_NGRAM "Build ngram" ON)
option(HAVE_SPECIAL "Build special" ON) 

add_subdirectory(src)

